fixed home page scaling on mobile

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -176,11 +176,12 @@ pre {
  */
 .title {
   background-color: #333333;
-  padding-top: 10vh;
+  padding-top: 7vh;
   text-align: center;
   height: 20vh;
   color: white;
   width: 100%;
+  padding-bottom: 2vh;
 }
 
 .title .post-title {
